Update _navbar.css to fix items alignment when viewing menu in "collapse in" state. Navbar-brand is now on it's own line and other items flow normally under it.

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -222,6 +222,7 @@
       .navbar-nav .nav-item {
         float: none;
         margin-left: 0;
+        clear: both;
       }
     }
     @include media-breakpoint-up(sm) {
@@ -235,6 +236,7 @@
       .navbar-nav .nav-item {
         float: none;
         margin-left: 0;
+        clear: both;
       }
     }
     @include media-breakpoint-up(md) {
@@ -248,6 +250,7 @@
       .navbar-nav .nav-item {
         float: none;
         margin-left: 0;
+        clear: both;
       }
     }
     @include media-breakpoint-up(lg) {
